[project]
name = "time-series-library-rust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chronos-forecasting==2.2.1",
    "datasets==4.4.1",
    "einops==0.8.1",
    "gluonts==0.16.2",
    "huggingface-hub==0.36.0",
    "hydra-core==1.3.0",
    "jax==0.8.1",
    "jaxtyping==0.3.4",
    "lightning==2.6.0",
    "local-attention==1.11.2",
    "matplotlib==3.10.8",
    "numpy==2.1.2",
    "orjson==3.11.5",
    "pandas==2.3.3",
    "patool==4.0.3",
    "python-dotenv==1.0.0",
    "pywavelets==1.9.0",
    "reformer-pytorch==1.4.4",
    "reservoirpy>=0.4.1",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "sktime==0.40.1",
    "sympy==1.13.1",
    "tensorboard==2.20.0",
    "timesfm==1.3.0",
    "tirex-ts==1.3.0",
    "torch==2.5.1",
    "tqdm==4.66.5",
    "transformers==4.57.3",
]
